[gd_scene load_steps=13 format=3 uid="uid://b4d3dgctiwcc3"]

[ext_resource type="Script" uid="uid://1i3wvbvc2lct" path="res://entities/enemy/sniper.gd" id="1_gl24o"]
[ext_resource type="Script" uid="uid://byxeb0rxjw5gu" path="res://entities/enemy/laser.gd" id="2_jooqj"]
[ext_resource type="Texture2D" uid="uid://djh2pmes24m5b" path="res://assets/sniper.png" id="2_k4ue4"]
[ext_resource type="PackedScene" uid="uid://bmn8km3ip46h6" path="res://components/health_component.tscn" id="3_wgxjb"]
[ext_resource type="PackedScene" uid="uid://bkmxotoqgn5rn" path="res://components/state_machine_component.tscn" id="4_gl24o"]
[ext_resource type="PackedScene" uid="uid://lm36snfl5obu" path="res://components/hitbox_component.tscn" id="4_j8i2r"]
[ext_resource type="PackedScene" uid="uid://ccvm8eicw8t4d" path="res://components/common_physics_component.tscn" id="5_20ct0"]
[ext_resource type="PackedScene" uid="uid://cdbvouq7r8gic" path="res://components/ai_component.tscn" id="6_j8d0c"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_j8d0c"]
shading_mode = 0

[sub_resource type="CylinderMesh" id="CylinderMesh_jooqj"]
material = SubResource("StandardMaterial3D_j8d0c")
top_radius = 0.25
bottom_radius = 0.25
radial_segments = 4
rings = 0

[sub_resource type="CylinderShape3D" id="CylinderShape3D_wgxjb"]
height = 2.1

[sub_resource type="CylinderShape3D" id="CylinderShape3D_gl24o"]
height = 2.89209
radius = 0.897461

[node name="Sniper" type="CharacterBody3D"]
collision_layer = 2
collision_mask = 7
script = ExtResource("1_gl24o")
speed = 2.0
metadata/_custom_type_script = "uid://88pbfyfqnxlk"

[node name="Laser" type="Node3D" parent="."]
script = ExtResource("2_jooqj")

[node name="LaserMesh" type="MeshInstance3D" parent="Laser"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0)
mesh = SubResource("CylinderMesh_jooqj")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.05, 0)
shape = SubResource("CylinderShape3D_wgxjb")

[node name="Sprite3D" type="Sprite3D" parent="."]
centered = false
offset = Vector2(-8, 0)
pixel_size = 0.125
billboard = 2
texture_filter = 0
texture = ExtResource("2_k4ue4")
hframes = 8

[node name="HealthComponent" parent="." instance=ExtResource("3_wgxjb")]
max_health = 2.0
knockback_multiplier = 2.0

[node name="StateMachineComponent" parent="." node_paths=PackedStringArray("sprite") instance=ExtResource("4_gl24o")]
sprite = NodePath("../Sprite3D")

[node name="CommonPhysicsComponent" parent="." instance=ExtResource("5_20ct0")]

[node name="AIComponent" parent="." instance=ExtResource("6_j8d0c")]

[node name="HitboxComponent" parent="." instance=ExtResource("4_j8i2r")]

[node name="CollisionShape3D" type="CollisionShape3D" parent="HitboxComponent"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.44604, 0)
shape = SubResource("CylinderShape3D_gl24o")
